# westwood-formats

./: .gitignore  README.md  mix-tool.md  tool-specs.md  westwood-formats.md  xcc.md
data/: filenames.txt  names.txt  resolved_hashes.txt  unknown_hashes.txt
impl/: CMakeLists.txt  TODO.md
impl/aud-tool/: main.cpp
impl/blowfish-tool/: main.cpp
impl/cmake/: mix-config.cmake.in
impl/cps-tool/: main.cpp
impl/fnt-tool/: main.cpp
impl/lcw-tool/: main.cpp
impl/libmix/include/mix/: error.h  export.h  mix.h  mix_c.h  types.h
impl/libmix/src/: error.cpp  hash.cpp  mix_c.cpp  mix_reader.cpp
impl/libwestwood/include/westwood/: aud.h  blowfish.h  cli.h  cps.h  error.h  export.h  fnt.h  io.h  lcw.h  mix.h  pal.h  png.h  shp.h  tmp.h  vqa.h  wsa.h
impl/libwestwood/src/: aud.cpp  blowfish.cpp  cps.cpp  error.cpp  fnt.cpp  io.cpp  lcw.cpp  mix.cpp  pal.cpp  png.cpp  shp.cpp  tmp.cpp  vqa.cpp  wsa.cpp
impl/mix-tool/: cmd_list.cpp  format.cpp  format.h  main.cpp
impl/pal-tool/: main.cpp
impl/shp-tool/: main.cpp
impl/tmp-tool/: main.cpp
impl/vqa-tool/: main.cpp
impl/wsa-tool/: main.cpp
scripts/: setup_testdata.sh
test/: conftest.py  run_tests.sh  test.md  test_mix.py
test/fixtures/: names.txt
test/test_cli/: test_aud_tool.py  test_common_options.py  test_cps_tool.py  test_fnt_tool.py  test_pal_tool.py  test_shp_tool.py  test_tmp_tool.py  test_vqa_tool.py  test_wsa_tool.py
test/test_integration/: test_error_recovery.py  test_game_asset_workflows.py  test_golden_files.py  test_mix_extraction_workflow.py
test/test_library/: test_aud_decode.py  test_cps_decode.py  test_fnt_decode.py  test_format40_compression.py  test_lcw_compression.py  test_pal_decode.py  test_shp_decode.py  test_tmp_decode.py  test_vqa_decode.py  test_wsa_decode.py
test/test_output/: test_gif_output.py  test_json_output.py  test_mp4_output.py  test_palette_swatch.py  test_png_output.py  test_wav_output.py
